--- a/SidTwo/Base.lproj/Main.storyboard
+++ b/SidTwo/Base.lproj/Main.storyboard
@@ -34,17 +34,41 @@
                                     <action selector="buttonTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="h27-Jh-F9u"/>
                                 </connections>
                             </button>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="2VT-VI-g6l">
+                                <rect key="frame" x="137.5" y="182" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="4eh-w3-nMB"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="wnT-wm-92H">
+                                <rect key="frame" x="137.5" y="233" width="100" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="mwC-Vl-UMT"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="wnT-wm-92H" firstAttribute="top" secondItem="2VT-VI-g6l" secondAttribute="bottom" constant="21" id="FqF-5V-CKh"/>
+                            <constraint firstItem="2VT-VI-g6l" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VzA-KZ-Vmt"/>
                             <constraint firstItem="uNk-Sf-KbA" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="50" id="WKL-zu-SR0"/>
+                            <constraint firstItem="2VT-VI-g6l" firstAttribute="top" secondItem="9ui-Hz-uVf" secondAttribute="bottom" constant="25" id="law-IT-j08"/>
                             <constraint firstItem="9ui-Hz-uVf" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="lep-q2-Tog"/>
                             <constraint firstItem="uNk-Sf-KbA" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qlp-hr-9nB"/>
+                            <constraint firstItem="wnT-wm-92H" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="vxh-wY-dRJ"/>
                             <constraint firstItem="9ui-Hz-uVf" firstAttribute="top" secondItem="uNk-Sf-KbA" secondAttribute="bottom" constant="36" id="w28-Vh-Dtz"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="coolLabel" destination="uNk-Sf-KbA" id="Q91-JP-gB4"/>
+                        <outlet property="text1" destination="2VT-VI-g6l" id="9Sz-F4-bU7"/>
+                        <outlet property="text2" destination="wnT-wm-92H" id="Tqs-3N-6oD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
